[package]
name = "comdrive"
version = "0.3.0"
authors = ["S.Percentage"]
description = "COM Object Driver for Rust"

[features]
trace_releasing = ["log"]

[dependencies]
widestring = "0.2"
univstring = "0.2"
metrics = { git = "https://github.com/Pctg-x8/metrics" }
log = { version = "0.4", optional = true }

[dependencies.winapi]
version = "0.3"
features = [
    "dxgi", "d3d12", "d3d11", "d2d1", "d2d1_1", "dcomp", "d3d11on12", "d3dcompiler",
    "wincodec", "dcompanimation", "objbase", "minwinbase", "d3d12sdklayers",
    "dwrite", "dwmapi", "winuser", "winbase", "dwrite_1", "dxgi1_3", "dxgi1_4"
]
